--- a/src/main/res/values-sv/strings.xml
+++ b/src/main/res/values-sv/strings.xml
@@ -36,5 +36,6 @@
         Ett fel uppstod när bilden sparades på din enhet.
         Vänligen kontrollera att lagringsutrymmet inte är låst.</string>
     <string name="error_assign">Ett fel uppstod när bilden tilldelades kontakten.</string>
+    <string name="retry_button_label">Retry</string>
 
 </resources>
