--- a/src/main/res/values-fr/strings.xml
+++ b/src/main/res/values-fr/strings.xml
@@ -18,27 +18,45 @@
 
 <resources>
 
-    <string name="app_name">Micopi</string>
-    <string name="ad_unit_id">ca-app-pub-3919756936405773/8547803445</string>
+    <string name="all_contacts">Tous les contacts</string>
     <string name="no_contact_selected">Personne n\'a été sélectionné</string>
-    <string name="introduction_text">
+    <string name="picture_will_be_previewed">
         Après le choix du contact,
         la photo produit sera présenté avant de l\'assigner à la personne désigné.
     </string>
-    <string name="image_description">Image calculée</string>
-    <string name="pick_contact">Choisir un contact</string>
-    <string name="save_button_label">Enregistrer l\'image</string>
-    <string name="assign_button_label">Attribuez à ce contact</string>
-    <string name="overwrite_dialog">Voulez-vous assigner cette image à %s?</string>
-    <string name="report_button_label">Rapport d\'erreur</string>
-    <string name="success_applying_image">%s a obtenu une nouvelle photo de profil.</string>
-    <string name="success_saving_image">L\'image enregistré comme %s.</string>
+    <string name="generated_image">Image calculée</string>
+    <string name="save_image_file">Enregistrer l\'image</string>
+    <string name="assign_to_contact">Attribuez à ce contact</string>
+    <string name="want_to_assign">Voulez-vous assigner cette image à %s?</string>
+    <string name="report">Rapport d\'erreur</string>
+    <string name="got_new_picture">%s a obtenu une nouvelle photo de profil.</string>
+    <string name="saved_picture_as">L\'image enregistré comme %s.</string>
     <string name="error_generating">Erreur de générer la photo.</string>
     <string name="error_retrieving">Erreur de désigner les fichiers de contact.</string>
     <string name="error_saving">Erreur d\'enregistrer la photo</string>
     <string name="error_assign">Erreur d\'assigner la photo.</string>
 
-    <string name="button_previous_image">Image précédente</string>
-    <string name="button_next_image">Image suivante</string>
+    <string name="previous_image">Image précédente</string>
+    <string name="next_image">Image suivante</string>
+
+    <string name="auto_experimental_long">
+        Notez:
+        \nDifférentes versions d\'Android et certaines applications
+        peuvent stocker des photos dans des moyens uniques.
+        \n\nIl est peu probable mais pas impossible que certaines images sont écrasées.
+    </string>
+    <string name="auto_mode">Automatic mode (experimental)</string>
+    <string name="auto_experimental_short">Auto mode is experimental!</string>
+    <string name="overwrite_all_or_only">
+        Would you like to overwrite all images or only generate pictures for contacts
+        that currently do not have one?
+    </string>
+    <string name="confirm_all">
+        Please confirm that you would like to overwrite all contact images.
+    </string>
+
+    <string name="missing_pictures">Missing pictures</string>
+    <string name="pick_contact">Choisir un contact</string>
+    <string name="skip">Skip</string>
 
 </resources>
